--- a/page/src/components/Canvas.css
+++ b/page/src/components/Canvas.css
@@ -1,18 +1,14 @@
-.container .container-content:has(.canvas) {
-    overflow: hidden;
-}
 .canvas {
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
         rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     border-radius: 5px;
-    overflow: auto;
+    overflow: scroll;
     
     /* max-height: 620px; */
-    min-height: 100%;
+    /* min-height: 100%; */
+    /* height: 100%; */
 }
-.canvas svg {
-    transform: translate(15px, 15px);
-}
+
 .canvas div.dotInfo {
     position: absolute;
     display: flex;
